Update History Retention options to allow archiving

--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -1,6 +1,6 @@
 <div class="history" id="history-tab">
     <div class="history-header">
-        <h2>$T('menu-history') <small data-bind="visible: history.showArchive()">($T('menu-archive'))</small></h2>
+        <h2>$T('menu-history') <small data-bind="visible: history.showArchive()">($T('archive'))</small></h2>
         <a href="#" data-bind="click: history.showMultiEdit, visible: hasHistory()">
             <span class="glyphicon glyphicon-tasks" data-tooltip="true" data-placement="left" title="$T('Glitter-multiOperations')"></span>
         </a>
