--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -554,13 +554,19 @@
                 if(data.value.result) {
                     resultBox.addClass('alert-success')
                     resultBox.prepend('<span class="glyphicon glyphicon-ok-sign"></span> ')
-                    // Allow adding the new server
-                    jQuery(".addNewServer").removeAttr("disabled")
+
+                    // Allow adding the new server if we are in the new-server section
+                    if(theButton.parents("form[action='addServer']").length) {
+                        jQuery(".addNewServer").removeAttr("disabled")
+                    }
                 } else {
                     resultBox.addClass('alert-danger')
                     resultBox.prepend('<span class="glyphicon glyphicon-exclamation-sign"></span> ')
+
                     // Disable the adding of new server, just to be sure
-                    jQuery(".addNewServer").attr("disabled", "disabled")
+                    if(theButton.parents("form[action='addServer']").length) {
+                        jQuery(".addNewServer").attr("disabled", "disabled")
+                    }
                 }
             });
         });
