--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -277,16 +277,7 @@ button:focus {
     fill: #EBEBEB;
 }
 
-/* Placeholders - Will not work if grouped! */
-::-webkit-input-placeholder {
-   color: #EBEBEB !important;
-}
-
-::-moz-placeholder {
-   color: #EBEBEB !important;
-   opacity: 1 !important;
-}
-
-:-ms-input-placeholder {
-   color: #EBEBEB !important;
+::placeholder {
+    color: #EBEBEB !important;
+    opacity: 0.5 !important;
 }
