--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -69,7 +69,7 @@
                     </div>
                     <div class="field-pair">
                         <label class="config" for="propagation_delay">$T('opt-propagation_delay')</label>
-                        <input type="number" name="propagation_delay" id="propagation_delay" value="$propagation_delay" /> <i>$T('minutes')</i>
+                        <input type="number" name="propagation_delay" id="propagation_delay" value="$propagation_delay" min="0" /> <i>$T('minutes')</i>
                         <span class="desc">$T('explain-propagation_delay')</span>
                     </div>
                     <div class="field-pair advanced-settings">
