Add autocomplete attributes

--- a/interfaces/Config/templates/login/main.tmpl
+++ b/interfaces/Config/templates/login/main.tmpl
@@ -36,8 +36,8 @@
                 <div class="alert alert-danger" role="alert">$error</div>
                 <!--#end if#-->
 
-                <input type="text" class="form-control" name="username" placeholder="$T('srv-username')" required autofocus>
-                <input type="password" class="form-control" name="password" placeholder="$T('srv-password')" required>
+                <input type="text" class="form-control" name="username" placeholder="$T('srv-username')" autocomplete="username" required autofocus>
+                <input type="password" class="form-control" name="password" placeholder="$T('srv-password')" autocomplete="current-password" required>
 
                 <button class="btn btn-default"><span class="glyphicon glyphicon-circle-arrow-right"></span> $T('login') </button>
 
