Add Bootstrap tooltips to any elements with title

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -92,7 +92,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-logo navbar-logo-small" href="${root}" title="$T('Home')">
+            <a class="navbar-logo navbar-logo-small" href="${root}" title="$T('Home')" data-placement="bottom">
                 #include $webdir + "/staticcfg/images/logo-small.svg"#
             </a>
         </div>
