--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -71,7 +71,7 @@
                         <div class="field-pair">
                             <label class="config" for="field_sort_string_$cur">$T('sortString')</label>
                             <input type="text" name="sort_string" id="field_sort_string_$cur" value="$slot.sort_string" required="required" />
-                            <button type="button" title="$T('sort-legenda')" class="btn btn-default patternKey" onclick="jQuery('#pattern_explainer_$cur').toggle(); window.scrollBy(0, 500);">
+                            <button type="button" class="btn btn-default patternKey" onclick="jQuery('#pattern_explainer_$cur').toggle(); window.scrollBy(0, 500);">
                                 <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> $T('sort-legenda')
                             </button>
                         </div>
